[project]
name = "python-quant"
version = "0.1.7"
description = "Quantitative Finance Library in Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "mpmath==1.3.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "polars==1.35.2",
    "polars-runtime-32==1.35.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scipy==1.16.3",
    "six==1.17.0",
    "sympy==1.14.0",
    "tzdata==2025.2",
]
[project.scripts]
python_quant = "python_quant.main:main"

[tool.ruff]
# Optionally, specify files and directories to include or exclude
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=testing_demo"
testpaths = [
    "tests",
]



