[project]
name = "python-quant"
version = "0.1.9"
description = "Quantitative Finance Library in Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "dash>=3.3.0",
    "mpmath",
    "numpy",
    "pandas",
    "polars",
    "polars-runtime-32",
    "python-dateutil",
    "pytz",
    "ruff>=0.14.6",
    "scipy",
    "six",
    "sympy",
    "tzdata",
]
[project.scripts]
python_quant = "python_quant.main:main"

[tool.ruff]
# Optionally, specify files and directories to include or exclude
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=testing_demo"
testpaths = [
    "tests",
]

[tool.uv]
    package = true



