[project]
name = "python-quant"
version = "0.1.9"
description = "Quantitative Finance Library in Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "nicegui>=3.3.1",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]
[project.scripts]
python_quant = "python_quant.main:main"
pyquant-app = "python_quant.app.app_main:start_app"

[tool.ruff]
# Optionally, specify files and directories to include or exclude
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=testing_demo"
testpaths = [
    "tests",
]

[tool.uv]
    package = true
